@@ -1,11 +1,13 @@
 plugins { 
-    id "org.springframework.boot" version "3.0.1"
-    id "io.spring.dependency-management" version "1.1.0"
-    id "io.freefair.lombok" version "6.6.1"
-    id "io.freefair.maven-publish-java" version "6.6.1"
-    id "org.owasp.dependencycheck" version "7.4.4"
+    id 'org.springframework.boot' version '3.1.1'
+    id 'io.spring.dependency-management' version '1.1.3'
+    id 'io.freefair.lombok' version '8.4'
+    id 'io.freefair.maven-publish-java' version '8.4'
+    id 'org.owasp.dependencycheck' version '8.4.2'
     id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'net.ltgt.errorprone' version '3.1.0'
     id 'net.researchgate.release' version '3.0.2'
+    id 'com.gorylenko.gradle-git-properties' version '2.4.1'
     id 'java'
     id 'jacoco'
 }
@@ -15,11 +17,10 @@ group = 'edu.kit.datamanager'
 
 ext {
     // versions of dependencies
-    springBootVersion = '2.7.6'
-    springDocVersion  = '1.6.11'
-    javersVersion     = '6.6.5'
+    springDocVersion  = '2.2.0'
+    javersVersion     = '7.0.0'
     keycloakVersion   = '19.0.0'
-
+    errorproneVersion = '2.23.0'
     // directory for generated code snippets during tests
     snippetsDir = file("build/generated-snippets")
 }
@@ -33,13 +34,11 @@ repositories {
     mavenCentral()
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
- 
-configurations {
-    all*.exclude module : 'spring-boot-starter-logging'
+java {
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
 }
-
+ 
 if (System.getProperty('profile') == 'minimal') {
     println 'Using minimal profile for building ' + project.getName()
     apply from: 'gradle/profile-minimal.gradle'   
@@ -50,8 +49,8 @@ if (System.getProperty('profile') == 'minimal') {
 
 dependencies {
     // Spring
-    implementation 'org.springframework:spring-messaging:5.3.24'
-    implementation 'org.springframework.cloud:spring-cloud-gateway-mvc:3.1.4'
+    implementation 'org.springframework:spring-messaging:6.0.2'
+    implementation 'org.springframework.cloud:spring-cloud-gateway-mvc:4.0.6'
 
     // Spring Boot
     implementation "org.springframework.boot:spring-boot-starter-data-rest"
@@ -70,20 +69,13 @@ dependencies {
 
     
     // cloud support
-    implementation "org.springframework.cloud:spring-cloud-starter-config:3.1.5"
-    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.4"
+    implementation "org.springframework.cloud:spring-cloud-starter-config:4.0.3"
+    implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.0.2"
 
     // springdoc
-    implementation "org.springdoc:springdoc-openapi-ui:${springDocVersion}"
-    implementation "org.springdoc:springdoc-openapi-data-rest:${springDocVersion}"
-    implementation "org.springdoc:springdoc-openapi-webmvc-core:${springDocVersion}"
-
-   //Keycloak already imported in service-base
-//    implementation "org.keycloak:keycloak-spring-boot-starter:${keycloakVersion}"
-//    implementation "com.nimbusds:nimbus-jose-jwt:9.23"
-//    implementation "io.jsonwebtoken:jjwt-api:0.11.5"
-//    implementation "io.jsonwebtoken:jjwt-impl:0.11.5"
-//    implementation "io.jsonwebtoken:jjwt-jackson:0.11.5"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-common:${springDocVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-api:${springDocVersion}"
 
     // CLI Parser
     implementation "com.beust:jcommander:1.82"
@@ -102,52 +94,63 @@ dependencies {
     implementation "org.javers:javers-core:${javersVersion}"
 
     // driver for postgres
-    implementation "org.postgresql:postgresql:42.5.1"
+    implementation "org.postgresql:postgresql:42.6.0"
     //driver for h2
-    implementation "com.h2database:h2:2.1.214"
+    implementation "com.h2database:h2:2.2.224"
     
     // apache
-    implementation "commons-io:commons-io:2.11.0"
-    implementation "org.apache.tika:tika-core:2.6.0"
+    implementation "commons-io:commons-io:2.14.0"
+    implementation "org.apache.tika:tika-core:2.9.1"
 
     // JSON validator
-    implementation "com.networknt:json-schema-validator:1.0.76"
+    implementation "com.networknt:json-schema-validator:1.0.87"
   
     // XML validator // https://mvnrepository.com/artifact/xerces/xercesImpl
     implementation 'xerces:xercesImpl:2.12.2'
 
     // datamanager
-    implementation "edu.kit.datamanager:repo-core:1.0.4"
-    implementation "edu.kit.datamanager:service-base:1.0.7"
+    implementation "edu.kit.datamanager:repo-core:1.2.1"
+    implementation "edu.kit.datamanager:service-base:1.2.0"
+
+    // elasticsearch (since service-base 1.1.0)
+    implementation "org.springframework.data:spring-data-elasticsearch:5.1.0"
 
     // DOIP SDK
-    implementation "net.dona.doip:doip-sdk:2.1.0"
+    implementation "net.dona.doip:doip-sdk:2.2.0"
 
     runtimeOnly    "org.apache.httpcomponents:httpclient:4.5.14"
     
     // Additional libraries for tests
-    testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:2.0.7.RELEASE"
+    testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc:3.0.0"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework:spring-test"
     testImplementation "org.springframework.security:spring-security-test"
    
     //Java 11 Support 
-    testImplementation "org.mockito:mockito-core:4.11.0"
+    testImplementation "org.mockito:mockito-core:5.6.0"
     testImplementation "junit:junit:4.13.2"
-}
+    testImplementation "com.github.stefanbirkner:system-lambda:1.2.1"
 
-dependencyManagement {
-    imports { mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}") }
+    // errorprone
+    errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
 }
 
 compileJava {
-    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+//    options.errorprone.disableAllWarnings = true
+    options.errorprone.disableWarningsInGeneratedCode = true
+    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Xmaxwarns" << "200"
+}
+
+compileTestJava {
+    // disable errorprone for tests
+    options.errorprone.disableWarningsInGeneratedCode = true
+    options.errorprone.enabled = false // change it to true to enable
 }
 
 test {
     finalizedBy jacocoTestReport
     environment "spring.config.location", "classpath:/test-config/"
-
+    
     maxHeapSize = "8192m"
     testLogging {
         outputs.upToDateWhen {false}
@@ -162,7 +165,7 @@ tasks.withType(Test) {
 }
 
 jacoco {
-    toolVersion = "0.8.7"
+    toolVersion = "0.8.10"
 }
 
 import java.text.SimpleDateFormat
@@ -187,6 +190,10 @@ asciidoctor {
     dependsOn test  
     sourceDir "docs/"
     outputDir "build/docs/html5"
+    inProcess = JAVA_EXEC
+    forkOptions {
+      jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    }
 }
 
 jar {
@@ -194,6 +201,10 @@ jar {
     enabled = false
 }
    
+springBoot {    
+    buildInfo()
+}
+
 bootJar {
     println 'Create bootable jar...'
 
@@ -206,6 +217,10 @@ bootJar {
         into 'static/docs'
     }
     launchScript()
+}
+
+release {
+    tagTemplate = 'v${version}'
 }
 
 // task for printing project name.
